--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
+        "start": "node index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "server": "nodemon index.js"
     },
@@ -23,6 +24,7 @@
         "express": "^4.18.2",
         "express-ejs-layouts": "^2.5.1",
         "express-validator": "^7.0.1",
+        "http-server": "^14.1.1",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.0.1"
     }
