--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "express-ejs-layouts": "^2.5.1",
+        "express-session": "^1.18.0",
         "express-validator": "^7.0.1",
         "http-server": "^14.1.1",
         "multer": "^1.4.5-lts.1",
